add log-dir option